<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" >
    
    <View android:id="@+id/centerStrut"
        android:layout_width="0dp"
        android:layout_height="0dp" 
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Decimal:" />

    <EditText
        android:id="@+id/decimalEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="Decimal number"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="0" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/decimalEdit"
        android:text="Hexadecimal:" />

    <EditText
        android:id="@+id/hexEdit"
        android:layout_width="0dp"
        android:layout_alignRight="@id/centerStrut"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="12"
        android:hint="Hexadecimal number"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:maxLength="@integer/maxHexLen"
        android:selectAllOnFocus="true"
        android:text="0"
        android:textAllCaps="true" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hexEdit"
        android:text="Binary:" />

    <EditText
        android:id="@+id/binEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="Binary number"
        android:inputType="number"
        android:maxLength="@integer/maxBinLen"
        android:maxLines="@integer/maxBinLines"
        android:selectAllOnFocus="true"
        android:text="0" />

    <TextView
        android:id="@+id/bitNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/bitNumberTxt" />

    <EditText
        android:id="@+id/charEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/hexEdit"
        android:layout_alignBottom="@id/hexEdit"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/centerStrut"
        android:ems="10"
        android:hint="@string/ascii_hint"
        android:inputType="textNoSuggestions"
        android:selectAllOnFocus="true"
      	 />

    <TextView
        android:id="@+id/charLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/charEdit"
        android:text="@string/ascii_label" />
    
    
    <TextView
        android:id="@+id/ipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/baseEdit"
        android:text="@string/iplabel" />

    <EditText
        android:id="@+id/ipEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ipLabel"
        android:ems="10"
        android:hint="@string/ip"
        android:inputType="text|number"
        android:selectAllOnFocus="true" />
    
    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ipEdit"
        android:text="@string/color_label" />

    <EditText
        android:id="@+id/colorEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/colorLabel"
        android:editable="false"
        android:inputType="none"
        android:ems="10"
        android:hint="@string/color_hint" />
    
    <TextView
        android:id="@+id/baseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/binEdit"
        android:text="@string/anyBase" />
    
    <EditText
        android:id="@+id/baseEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/centerStrut"
        android:layout_below="@+id/baseLabel"
        android:ems="10"
        android:hint="@string/any_base"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:selectAllOnFocus="true"
        android:text="0" />

    <Spinner
        android:id="@+id/baseSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/baseEdit"
        android:layout_alignTop="@id/baseEdit"
        android:layout_toRightOf="@id/baseEdit" 
        android:layout_alignParentRight="true"/>

</RelativeLayout>
</ScrollView>